# microimpute

./: .buildinfo  .gitignore  CLAUDE.md  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  main.yml  pr.yaml
_sources/: index.md
_sources/autoimpute/: autoimpute.ipynb  index.md
_sources/examples/scf_to_cps/: index.md
_sources/imputation-benchmarking/: benchmarking-methods.ipynb  index.md
_sources/models/imputer/: implement-new-model.md  index.md
_sources/models/matching/: index.md  matching-imputation.ipynb
_sources/models/ols/: index.md  ols-imputation.ipynb
_static/: style.css
autoimpute/: index.html
docs/: _config.yml  _toc.yml  index.md
docs/autoimpute/: autoimpute.ipynb  index.md
docs/benchmarking/: index.md
docs/examples/cps/: index.md
docs/examples/scf_to_cps/: imputing-from-cps-to-scf.ipynb  imputing-from-scf-to-cps.ipynb  imputing-from-scf-to-cps.md  index.md
docs/imputation-benchmarking/: benchmarking-methods.ipynb  imputing-across-surveys.md  index.md
docs/models/imputer/: implement-new-model.ipynb  implement-new-model.md  index.md
docs/models/matching/: index.md  matching-imputation.ipynb
docs/models/ols/: index.md  ols-imputation.ipynb
docs/models/qrf/: index.md  qrf-imputation.ipynb
docs/models/quantreg/: index.md  quantreg-imputation.ipynb
examples/scf_to_cps/: imputing-from-scf-to-cps.html  index.html
imputation-benchmarking/: imputing-across-surveys.html  index.html
microimpute/: __init__.py  config.py
microimpute/comparisons/: __init__.py  autoimpute.py  data.py  imputations.py  plot.py  quantile_loss.py
microimpute/evaluations/: cross_validation.py  train_test_performance.py
microimpute/models/: imputer.py  matching.py  ols.py  qrf.py  quantreg.py
microimpute/tests/: test_autoimpute.py  test_plot_interface.py  test_quantile_comparison.py
microimpute/tests/test_models/: README.md  test_imputers.py  test_matching.py  test_ols.py  test_qrf.py  test_quantreg.py
microimpute/utils/: statmatch_hotdeck.py
microimpute/visualizations/: __init__.py  plotting.py
models/imputer/: implement-new-model.html  index.html
models/matching/: index.html
models/ols/: index.html
models/qrf/: index.html
models/quantreg/: index.html
paper/: imputing-from-scf-to-cps copy.ipynb  imputing-from-scf-to-cps.ipynb  test.ipynb
us_imputation_benchmarking/: .gitignore  __init__.py  config.py  main.py
us_imputation_benchmarking/.ipynb_checkpoints/: SCF_imputation copy-checkpoint.ipynb
us_imputation_benchmarking/comparisons/: __init__.py  data.py  imputations.py  plot.py  quantile_loss.py
us_imputation_benchmarking/evaluations/: __init__.py  cross_validation.py  train_test_performance.py
us_imputation_benchmarking/models/: __init__.py  imputer.py  matching.py  ols.py  qrf.py  quantreg.py
us_imputation_benchmarking/tests/: __init__.py  test_basic.py  test_quantile_comparison.py  tests.py
us_imputation_benchmarking/tests/models/: README.md  test_imputer_examples.py  test_imputers.py  test_matching.py  test_ols.py  test_qrf.py  test_quantreg.py
us_imputation_benchmarking/tests/test_models/: __init__.py  test_imputers.py  test_matching.py  test_ols.py  test_qrf.py  test_quantreg.py
us_imputation_benchmarking/utils/: logging_utils.py  qrf.py  statmatch_hotdeck.py
