[project]
name = "microimpute"
version = "0.1.0"
description = "Benchmarking imputation methods for microdata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.2.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.14.0,<6.0.0",
    "kaleido>=0.2.1,<0.3.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "scipy>=1.0.0,<2.0.0",
    "rpy2>=3.4.0,<3.6.0",
    "requests>=2.25.0,<3.0.0",
    "tqdm>=4.6.0,<5.0.0",
    "statsmodels>=0.13.0,<0.15.0",
    "quantile-forest>=1.0.0,<1.5.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
    "build",
    "linecheck",
]

docs = [
    "jupyter-book>=0.13.1,<1.0.0",
    "sphinx>=4.0.0,<5.0.0",
    "sphinx_book_theme>=0.3.0,<0.4.0",
    "sphinx-togglebutton>=0.3.0,<0.4.0",
    "sphinxcontrib-serializinghtml>=1.1.5,<2.0.0",
    "sphinxcontrib-applehelp>=1.0.4,<2.0.0",
    "sphinxcontrib-devhelp>=1.0.2,<2.0.0",
    "sphinxcontrib-htmlhelp>=2.0.1,<3.0.0",
    "sphinxcontrib-jsmath>=1.0.1,<2.0.0",
    "sphinxcontrib-qthelp>=1.0.3,<2.0.0",
    "lxml_html_clean>=0.4.0,<0.5.0",
    "backports.tarfile>=1.0.0,<2.0.0"
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ["py311"]