[project]
name = "microimpute"
version = "0.1.0"
description = "Benchmarking imputation methods for microdata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.24.0,<6.0.0",
    "kaleido>=0.2.1,<0.3.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "rpy2>=3.5.0,<3.6.0",
    "requests>=2.32.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "quantile-forest>=1.4.0,<1.5.0",
    "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.1.0",
    "flake8==6.0.0",
    "black==25.1.0",
    "isort==5.9.3",
    "mypy==1.0.0",
    "build==1.2.2",
    "linecheck==0.1.0",
]

docs = [
    "sphinx>=5.3.0,<6.0.0",
    "jupyter-book>=0.13.0,<0.14.0",
    "sphinx-book-theme>=0.3.3,<0.4.0",
    "myst-nb>=0.13.1,<0.14.0",
    "myst-parser>=0.15.2,<0.16.0",
    "sphinx-copybutton>=0.5.0,<0.6.0",
    "sphinx-design>=0.1.0,<0.2.0",
    "ipywidgets>=7.8.0,<8.0.0",
    "plotly>=5.24.0,<6.0.0",
    "sphinx-argparse>=0.3.2,<0.4.0",
    "sphinx-math-dollar>=1.2.1,<1.3.0",
    "furo>=2022.12.7,<2023",
    "pydata-sphinx-theme>=0.8.1,<0.9.0",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ["py311"]
